JumpScript/tests/baselines/reference/ClassDeclaration11.errors.txt
tests/cases/compiler/ClassDeclaration11.jump(2,4): error TS2390: Constructor implementation is missing.


==== tests/cases/compiler/ClassDeclaration11.jump (1 errors) ====
    class C {
       constructor();
       ~~~~~~~~~~~~~~
!!! error TS2390: Constructor implementation is missing.
       foo() { }
    }